--- a/ApexLegendsFinal/appsettings.json
+++ b/ApexLegendsFinal/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Finalcontext": "Server=(localdb)\\mssqllocaldb;Database=Characters; "Trusted_Connection=True
+  }
 }
